[package]
name = "vixcollect"
version = "0.1.0"
authors = ["Aditya Diwakar <aditya@diwakar.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table-extract = "0.2"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2.21", features = ["macros"] }
